commit before charging battery

--- a/detect.html
+++ b/detect.html
@@ -31,5 +31,17 @@
                 </div>
             </div>
         </div>
+        <div class="detect-area">
+            <div class="img-rotate-full">
+                <div class="selector-left">
+                    
+                </div>
+                <div class="img-right">
+                </div>
+            </div>
+            <div class="img-right-show">
+                
+            </div>
+        </div>
     </body>
 </html>
