commit before go home

--- a/detect.html
+++ b/detect.html
@@ -33,8 +33,22 @@
         </div>
         <div class="detect-area">
             <div class="img-rotate-full">
-                <div class="selector-left">
-                    
+                <div class="sm-left">
+                    <!--div class="back-arrow">
+                        bb
+                    </div-->
+                    <div class="selector-left">
+                        <img src="statics/img/faces/face_1.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_2.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_3.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_4.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_5.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_6.jpg" class="demo-image-list" alt="">
+                        <img src="statics/img/faces/face_7.jpg" class="demo-image-list" alt="">
+                    </div>
+                    <!--div class="forward-arrow">
+                        dd
+                    </div-->
                 </div>
                 <div class="img-right">
                 </div>
