--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="api-append">
                         从一张照片中检测出所有人脸
                     </div>
-                    <a href="demo" class="demo">尝试demo</a>
+                    <a href="detect.html" class="demo">尝试demo</a>
                 </div>
                 <div class="api-compair block">
                     <div class="img-out">
