--- a/detect.html
+++ b/detect.html
@@ -31,31 +31,27 @@
                 </div>
             </div>
         </div>
-        <div class="detect-area">
+        <div ng-app='detect_demo' ng-controller="detect_controller as dc" class="detect-area">
             <div class="img-rotate-full">
                 <div class="sm-left">
-                    <!--div class="back-arrow">
-                        bb
-                    </div-->
-                    <div class="selector-left">
-                        <img src="statics/img/faces/face_1.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_2.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_3.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_4.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_5.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_6.jpg" class="demo-image-list" alt="">
-                        <img src="statics/img/faces/face_7.jpg" class="demo-image-list" alt="">
+                    <div class="selector-left" >
+                        <img src={{one}} class="demo-image-list {{one == dc.selected ? 'demo-image-list-selected':''}}" ng-repeat="one in dc.imageurls" ng-click="dc.click(one)" alt="">
                     </div>
-                    <!--div class="forward-arrow">
-                        dd
-                    </div-->
                 </div>
                 <div class="img-right">
+                    <div class='image-big'>
+                        <img src={{dc.selected}} class="image-holder-right" alt="">
+                    </div>
+                    <div class="json-back">
+                        this field should be json ret from server               
+                    </div>
                 </div>
             </div>
-            <div class="img-right-show">
-                
-            </div>
         </div>
+        <div class="footer">
+            Powered by <a class="footer-url" href="http://cloud.icybee.cn">Icycloud</a>
+        </div>
+        <script src="statics/js/angular.min.js"></script>
+        <script src="statics/js/detect.js"></script>
     </body>
 </html>
