--- a/index.html
+++ b/index.html
@@ -71,5 +71,7 @@
             </div>
 
         </div>
+        <script src="statics/js/angular.min.js"></script>
+            
     </body>
 </html>
